<resources>
    <string name="app_name">Resources</string>
    <string name="explore_learn_share">Explore.Learn.Share</string>
    <string name="discover_new_topics_share_your_ideas_and_knowledge_with_your_peers">Discover new topics, share your ideas and knowledge with your peers</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Create">create</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">SignUp</string>
    <string name="hello_again">Hello again !</string>
    <string name="confirm_password">Confirm Password</string>
</resources>